added more cat sprites note: - folder organization - made more cat spritesheets

--- a/config/config.json
+++ b/config/config.json
@@ -8,13 +8,73 @@
     },
     {
       "name": "black_cat_running",
-      "path": "./assets/images/black_cat_running.png",
+      "path": "./assets/images/ModifiedCatSprites/black_cat_running.png",
       "width": 128,
       "height": 256
     },
     {
       "name": "black_cat_walking",
-      "path": "./assets/images/black_cat_walking.png",
+      "path": "./assets/images/ModifiedCatSprites/black_cat_walking.png",
+      "width": 128,
+      "height": 128
+    },
+    {
+      "name": "blue_cat_running",
+      "path": "./assets/images/ModifiedCatSprites/blue_cat_running.png",
+      "width": 128,
+      "height": 256
+    },
+    {
+      "name": "blue_cat_walking",
+      "path": "./assets/images/ModifiedCatSprites/blue_cat_walking.png",
+      "width": 128,
+      "height": 128
+    },
+    {
+      "name": "hairless_cat_running",
+      "path": "./assets/images/ModifiedCatSprites/hairless_cat_running.png",
+      "width": 128,
+      "height": 256
+    },
+    {
+      "name": "hairless_cat_walking",
+      "path": "./assets/images/ModifiedCatSprites/hairless_cat_walking.png",
+      "width": 128,
+      "height": 128
+    },
+    {
+      "name": "orange_cat_running",
+      "path": "./assets/images/ModifiedCatSprites/orange_cat_running.png",
+      "width": 128,
+      "height": 256
+    },
+    {
+      "name": "orange_cat_walking",
+      "path": "./assets/images/ModifiedCatSprites/orange_cat_walking.png",
+      "width": 128,
+      "height": 128
+    },
+    {
+      "name": "purple_cat_walking",
+      "path": "./assets/images/ModifiedCatSprites/purple_cat_walking.png",
+      "width": 128,
+      "height": 256
+    },
+    {
+      "name": "purple_cat_walking",
+      "path": "./assets/images/ModifiedCatSprites/purple_cat_walking.png",
+      "width": 128,
+      "height": 128
+    },
+    {
+      "name": "red_cat_running",
+      "path": "./assets/images/ModifiedCatSprites/red_cat_running.png",
+      "width": 128,
+      "height": 256
+    },
+    {
+      "name": "red_cat_walking",
+      "path": "./assets/images/ModifiedCatSprites/red_cat_walking.png",
       "width": 128,
       "height": 128
     }
