--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,19 @@
       "height": 16064
     },
     {
+      "name": "crystal_ball_sheet",
+      "path": "./assets/images/plinko/crystal_ball_sheet.png",
+      "width": 160,
+      "height": 32
+    },
+    {
+      "name": "beam_sheet",
+      "path": "./assets/images/plinko/beam_sheet.png",
+      "width": 48,
+      "height": 48
+    },
+
+    {
       "name": "items",
       "path": "./assets/images/plinko/IconSet.png",
       "width": 512,
@@ -15,7 +28,7 @@
     {
       "name": "ball",
       "path": "./assets/images/plinko/Ball.png",
-      "width": 192,
+      "width": 33,
       "height": 32
     },
     {
@@ -30,7 +43,7 @@
       "width": 31,
       "height": 25
     },
-        {
+    {
       "name": "attack_increase",
       "path": "./assets/images/PowerUps/Sword.png",
       "width": 34,
@@ -126,7 +139,6 @@
       "width": 128,
       "height": 128
     }
-
   ],
   "sounds": [
     {
