--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,12 @@
       "width": 48,
       "height": 48
     },
-
+    {
+      "name": "power_up_sheet",
+      "path": "./assets/images/plinko/power_up_sheet.png",
+      "width": 92,
+      "height": 32
+    },
     {
       "name": "items",
       "path": "./assets/images/plinko/IconSet.png",
@@ -35,24 +40,6 @@
       "name": "plinko_ball",
       "path": "./assets/images/plinko/slimeCat.png",
       "width": 128,
-      "height": 32
-    },
-    {
-      "name": "speed",
-      "path": "./assets/images/PowerUps/Shoes.png",
-      "width": 31,
-      "height": 25
-    },
-    {
-      "name": "attack_increase",
-      "path": "./assets/images/PowerUps/Sword.png",
-      "width": 34,
-      "height": 32
-    },
-    {
-      "name": "defence",
-      "path": "./assets/images/PowerUps/shield.png",
-      "width": 30,
       "height": 32
     },
     {
